 14/01/2005: Now the partition algorithm recolor the vertices between 1 and 16 (previously 0-15) and the colors  names are diplayed in the message window.
 14/01/2005: Added an algorithm to color connected components:
		int TopologicalGraph::ColorConnectedComponents().
14/01/2005: Corrected a bug occurring while forcing the computation of the map of a tree.
04/02/2005: Corrected a bug occurring while drawing a not connected bipartite graph by contact of segments.
04/02/2005: Dual graphs  and angle graphs are only computed for connected planar graphs.
10/02/2005: Improved ClientServer programs.
11/02/2005: Added an algoritm to make a graph connected by adding vertices:
		int TopologicalGraph::MakeConnectedVertex().
11/02/2005: Added an algoritm to make a graph biconnected by adding vertices:
		int TopologicalGraph::NpBiconnectVertex()
11/02/2005: So now, triangulate by adding vertices and quandrangulate a graph by adding vertices work properly.	
18/02/2005: The vision algorithm does not anymore compute a biporlar orientation if the graph is already biporlarly oriented.
18/02/2005: There were some bugs in the editor when reversing the orientation of an edge.
20/02/2005: Oriented edges can be drawn with an arrow
25/02/2005: In all windows, the mouse wheel and the keyboard up, down and home are used to zoom.
05/03/2005: Now Pigale uses a second thread for non graphic functions.
05/03/2005: Schnyder orientation was not displaying the orientation.
09/03/2005: Corrected a bug that could occur while saving a tgf file.	
11/03/2005: Now the zoom keeps the graph on a grid if any.
16/03/2005: Added in the file menu an option to start the server.