@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(pigale,1.2.10,[hf@sourceforge.net],Public Implementation of a Graph Library and Editor)
+AC_INIT(pigale,1.2.11,[hf@sourceforge.net],Public Implementation of a Graph Library and Editor)
 dnl CURRENT:REVISION:AGE
 LIB_VERSION=1:27:0
 AC_SUBST(LIB_VERSION)
